Cambios de facilitar el uso